deployment/aws/quick-deploy-cic/manifest/cic.yaml
---
# Deploy the CIC as a pod
apiVersion: v1
kind: Pod
metadata:
  name: cic-k8s-ingress-controller
  labels:
    app: cic-k8s-ingress-controller
spec: 
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic-k8s-ingress-controller
        # CIC Image from AWS Marketplace
        image: "117940112483.dkr.ecr.us-east-1.amazonaws.com/9893a514-39ef-47cd-b1df-24312ff2c810/cg-1706352000/quay.io/netscaler/netscaler-k8s-ingress-controller:1.19.6-latest"
        args:
          - --ingress-classes
            citrix-ingress
        imagePullPolicy: Always
---
