deployment/aws/quick-deploy-cic/manifest/cic-vpx-all-in-one.yaml
#Using a basic apache web server as application for illustration
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: apache
  labels:
      name: apache
spec:
  selector:
    matchLabels:
      app: apache
  replicas: 6
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80

---
#Expose the apache web server as a Service
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: apache
---
# Deploy the CIC as a pod
apiVersion: v1
kind: Pod
metadata:
  name: cic-k8s-ingress-controller
  labels:
    app: cic-k8s-ingress-controller
spec: 
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic-k8s-ingress-controller
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.2.0"
        args:
          - --ingress-classes
            citrix-ingress
        imagePullPolicy: Always
---
#Specify the ingress resource
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: citrix-ingress
  annotations:
   kubernetes.io/ingress.class: "citrix-ingress"
spec:
  rules:
  - host: citrix-ingress.com
    http:
      paths:
      - path: /
        backend:
          serviceName: apache
          servicePort: 80
---
